[gd_scene load_steps=2 format=3 uid="uid://q4bgigjmikn5"]

[ext_resource type="Script" uid="uid://bvqgini7q04y6" path="res://addons/quest_weaver/nodes/action/play_cutscene_node/play_cutscene_node_editor.gd" id="1_8qsti"]

[node name="PlayCutsceneNodeEditor" type="VBoxContainer"]
script = ExtResource("1_8qsti")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Anim Player Path: "

[node name="AnimationPlayerPathEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Animation Name: "

[node name="AnimationNameEdit" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="WaitForCompletionCheckbox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Wait for Completion"
